# Simple-Game-of-life

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  screen.h
